--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-form": "^7.0.4",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0"
   }
